--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,9 @@ table {
 body {
 	font-family: 'Josefin Sans', sans-serif;
 }
+
+/*-- CUSTOM CSS -- NAVBAR SETTINGS --*/
+
+.navbarMain {
+	background-color: #5C2E1A;
+}
