Updated search bar.  Using this as a placeholder.  After learning more programming, return to this to [1j] animate the search bar so that it slides left to reveal the search bar, and [2] program the search bar to enable it to search  this website.

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ a.navLinkMain {color: #F1F0EA; font-size: 24px;}
 
 a.navLinkMain:hover {color: #32A431;}
 
+.searchHereMain {color: #DE5307; font-size: 24px;}
+
 
 
 
